create profile and authentification pages and fixe some problems and update the nav and homa page

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
 </head>
-<body>
+<body class="h-100">
   <app-root></app-root>
 </body>
 </html>
